added common header file
clean up, non-optional spaces

--- a/README
+++ b/README
@@ -20,3 +20,9 @@ void imprimir_juego();
 
 
 TODO: EYES!!!!
+
+
+http://irc.essex.ac.uk/www.iota-six.co.uk/c/f7_dynamic_memory_allocation.asp
+http://www.cs.cf.ac.uk/Dave/C/node31.html#SECTION003100000000000000000
+https://computing.llnl.gov/tutorials/pthreads/exercise.html
+C Interfaces and Implementations: Techniques for Creating Reusable Software
